--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,10 +27,10 @@ categories = ["filesystem"]
 #
 #     cargo build --release --no-default-features --features=quota
 #
-default = [ "pam", "quota" ]
+default = [ "pam-support" ]
 
 # dependencies for the feature.
-pam = [ "pam-sandboxed" ]
+pam-support = [ "pam" ]
 quota = [ "fs-quota" ]
 
 # Include debug info in release builds.
@@ -60,7 +60,7 @@ lazy_static = "1.4.0"
 libc = "0.2.94"
 log = "0.4.14"
 nix = "0.21.0"
-pam-sandboxed = { path = "pam", version = "0.2.0", optional = true }
+# pam-sandboxed = { path = "pam", version = "0.2.0", optional = true }
 percent-encoding = "2.1.0"
 regex = "1.5.4"
 serde = { version = "1.0.125", features = ["derive"] }
@@ -75,3 +75,4 @@ url = "2.2.2"
 #webdav-handler = { path = "../webdav-handler-rs", version = "=0.2.0" }
 webdav-handler = "0.2.0"
 pwhash = "1.0.0"
+pam = { version = "0.7.0", optional = true }
